# projeto-opcoes

./: README.md  pyproject.toml  requirements.txt
src/: automacaoOpcoes.ipynb  etl.py  pipeline_opcoes.py  teste 1.ipynb
