[tool.poetry]
name = "pipeline-opcoes"
version = "0.1.0"
description = ""
authors = ["Patrick Perez <patrickperez1698@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pandas = "^2.2.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
